--- a/css/configuracion.css
+++ b/css/configuracion.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: purple;
+    
 }
 
 html{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 10px;
-    background-color:rgb(223, 61, 61);
+    border: 1rem;
+    border-style: inset;
+    border-color: blue;
 }
