--- a/css/configuracion.css
+++ b/css/configuracion.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: pink;
     
 }
 
 html{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 10px;
-    border: 1rem;
-    border-style: inset;
-    border-color: blue;
+    
 }
