--- a/img/im.css
+++ b/img/im.css
@@ -4,3 +4,12 @@
 
     margin-left: 10rem;
 }
+@media  only screen and (min-width: 1300px) {
+    .im1{
+        height: 22rem;
+        width: 22rem;
+
+        margin-left: 52rem;
+    }
+
+}
